apps/media/radarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  selector:
    app: radarr
  ports:
    - name: webui
      port: 7878
      targetPort: 7878
