apps/media/radarr/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`radarr.thijsvdweijer.nl`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.thijsvdweijer.nl`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
  tls:
    secretName: radarr-tls
